fix: header card spacing bottom

--- a/src/sections/Projects/Project/Project.module.scss
+++ b/src/sections/Projects/Project/Project.module.scss
@@ -40,7 +40,7 @@
       flex-wrap: wrap;
       align-items: center;
       gap: 1rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
     }
 
     .title {
@@ -88,6 +88,7 @@
       max-width: 300px;
       height: auto;
       border: $border-l;
+      aspect-ratio: 16/9;
 
       @include respond(mobile_l) {
         max-width: unset;
